--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-navbar></app-navbar>
 <div class="container">
   <div class="starter-template">
-      <h1>Bootstrap starter template</h1>
-      <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+      <h1>Tutoriale</h1>
+      <p class="lead">Zobacz najlepsze tutoriale javascript typesctipt es6 angular5 ionic3 angularfire2<br> Nie czekaj tylko zabieraj się do nauki. Nie ma czasu do stracenia.</p>
+      <app-tutorial-list></app-tutorial-list>
   </div>
 </div>
