--- a/src/app/tutorial-list/tutorial-list.component.html
+++ b/src/app/tutorial-list/tutorial-list.component.html
@@ -4,7 +4,7 @@
           <h3><a href="#">{{tutorial.title}}</a> </h3>
           <p>{{tutorial.description}}</p>
           <div>
-              <a href="{{tutorial.url}}" target="_blank" class="btn btn-danger">Idź do toturiala</a>
+              <a href="{{tutorial.url}}" target="_blank" class="btn btn-danger">Idź do tutoriala</a>
           </div>
       </ngb-alert>
   </div>
